--- a/with-docker/Dockerfile
+++ b/with-docker/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:18
+FROM node:22
 
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 8088:80
+# EXPOSE 80
+EXPOSE 3000
 CMD npm run build && npm start
