--- a/with-docker/package.json
+++ b/with-docker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "with-docker",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.1.0",
+  "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
